# rusty-solana

./: Cargo.toml  railway.json
src/: main.rs
src/models/: response.rs
src/routes/: keypair.rs  message.rs  mod.rs  send.rs  token.rs
src/utils/: mod.rs
